fix: フロントエンドの環境アップデート
imageのnodeバージョン上げ
COPYコマンドの仕様が変更されワイルドカードが仕様不可になったため
create-next-appで作成されるフォルダをあらかじめ作成することにした
空のフォルダはgit add 出来ないため .gitkeep を使用

環境構築後開発が進んでも環境構築出来るようにnpm installの部分を修正
create-next-appのオプションを最新のバージョン14に対応できるように修正

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,7 @@
-FROM node:16.15.0
+FROM node:21
 WORKDIR /frontend
 
-# ワイルドカードで不確定の場合がある際は必ず一つは存在するファイルをCOPYする必要がある。
-COPY Dockerfile /neumann-client/package.json* /neumann-client/package-lock.json* /frontend
+COPY /neumann-client /frontend/
 
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
